steward-pacman/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: steward-pacman
  labels:
    app.kubernetes.io/part-of: steward
