steward-pacman/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pacman
  namespace: steward-pacman
  labels:
    app.kubernetes.io/name: pacman
    app.kubernetes.io/component: frontend
    app.kubernetes.io/part-of: steward
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: pacman
  template:
    metadata:
      labels:
        app.kubernetes.io/name: pacman
        app.kubernetes.io/component: frontend
        app.kubernetes.io/part-of: steward
    spec:
      containers:
        - name: pacman
          image: quay.io/rh_ee_cschmitz/pacman:green
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 256Mi
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 10
